--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "httpx>=0.27",         # tests
   "pytest>=8.2",         # tests
   "pytest-asyncio>=0.23", # tests async
+  "torch>=2.2"
 ]
 
 [tool.pytest.ini_options]
