--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,6 +28,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+    - name: Login to Hugging Face
+      run: |
+        hf auth login --token ${{ secrets.HF_TOKEN }}
     # - name: Lint with flake8
     #  run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -36,4 +39,4 @@ jobs:
         # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        pytest -v -s
